Update Scenario Functions
debugged the logic a bit, now passing 18 of the test cases, need help fixing the final 5 (between sub and calc functions)